langtools/test/tools/javac/generics/diamond/neg/Neg04.out
Neg04.java:19:13: compiler.err.not.within.bounds: java.lang.String, V
Neg04.java:19:26: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
Neg04.java:20:13: compiler.err.not.within.bounds: ? extends java.lang.String, V
Neg04.java:20:36: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
Neg04.java:21:21: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
Neg04.java:22:13: compiler.err.not.within.bounds: ? super java.lang.String, V
Neg04.java:22:34: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
Neg04.java:24:13: compiler.err.not.within.bounds: java.lang.String, V
Neg04.java:24:26: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
Neg04.java:25:13: compiler.err.not.within.bounds: ? extends java.lang.String, V
Neg04.java:25:36: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
Neg04.java:26:21: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
Neg04.java:27:13: compiler.err.not.within.bounds: ? super java.lang.String, V
Neg04.java:27:34: compiler.err.cant.apply.diamond: (compiler.misc.diamond: Foo), null
14 errors
